# HyPE-Experiments

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
sep_funcs/: __init__.py
src/actors/: __init__.py  mpc_actor.py
src/alchemy/: __init__.py  alchemy_world.py  classic_alchemy_env.py  continuous_stochastic_alchemy_env.py  custom_types.py  discreate_stochastic_alchemy_env.py  potion.py
src/models/: __init__.py  latent_dynamics_model.py  latent_encoder.py
src/sep_funcs/: __init__.py  distance_methods.py  hype.py
src/train/: __init__.py  alchemy_dataset.py
src/utils/: __init__.py  hashed_tensor.py  utils.py
tests/: test_sep_funcs.py
tests/test_actors/: test_mpc.py
tests/test_alchemy/: test_classic.py  test_continuous_stochastic.py  test_discrete_stochastic.py  test_potion.py
tests/test_models/: test_latent_dynamics_model.py  test_latent_encoder.py
tests/test_sep_funcs/: test_dist_methods.py  test_sep_funcs.py
tests/test_train/: test_alchemy_dataset.py
